# halo2_hi

./: Cargo.toml  README.md  prover.trace  trace.xlsx
src/: main.rs
